[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phantom-hand-tracker"
version = "0.1.0"
description = "MediaPipe hand tracking with kinematic ghost frames for occlusion handling"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Aimisnotavailable" }
]
dependencies = [
    "opencv-python>=4.5",
    "numpy>=1.19",
    "mediapipe>=0.10.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/Aimisnotavailable/Phantom-Hand"

[tool.setuptools]
package-dir = { "" = "src" }
packages = { find = { where = ["src"] } }